# chip-emulator

./: .gitignore  CMakeLists.txt  main.cpp
Emulator/: CMakeLists.txt  Emulator.hpp
Emulator/include/: CPU.hpp  Config.hpp  Emulator.hpp  Memory.hpp
Emulator/src/: CPU.cpp  Emulator.cpp  Memory.cpp
hacks/: run.sh
src/: main.cpp
src/Emulator/: Config.h  Emulator.cpp  Emulator.h
src/Emulator/CPU/: CPU.h
src/Emulator/Memory/: Memory.h
